add logs and refactor mapper